ADD_SUBDIRECTORY(Comm)
ADD_SUBDIRECTORY(trans_dev_lib)
#ADD_SUBDIRECTORY(robot_lib)
#ADD_SUBDIRECTORY(sensor_lib)
#ADD_SUBDIRECTORY(chassis_lib)
ADD_SUBDIRECTORY(interpro_shared_lib)
#ADD_SUBDIRECTORY(xmlrpc_lib)
#ADD_SUBDIRECTORY(mapserver_lib)
#ADD_SUBDIRECTORY(bag_lib)
#ADD_SUBDIRECTORY(pf_lib)
#ADD_SUBDIRECTORY(libpng)
#ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(log4cpp_lib)
ADD_SUBDIRECTORY(log_lib)
#ADD_SUBDIRECTORY(openslam_lib)
#ADD_SUBDIRECTORY(scanmatcher_lib)
ADD_SUBDIRECTORY(msg_pump_lib)
#ADD_SUBDIRECTORY(device_lib)
#ADD_SUBDIRECTORY(protobuf_msg_lib)
#ADD_SUBDIRECTORY(project_lib)
#ADD_SUBDIRECTORY(planner_lib)
#ADD_SUBDIRECTORY(vpp_lib)
#ADD_SUBDIRECTORY(movement_lib)
#ADD_SUBDIRECTORY(slam_lib)
#ADD_SUBDIRECTORY(reflected_pillar_lib)
#ADD_SUBDIRECTORY(sophus_lib)
#ADD_SUBDIRECTORY(geometry_lib)
#ADD_SUBDIRECTORY(sub_map_loc_lib)
#ADD_SUBDIRECTORY(dynamic_loc_lib)
#ADD_SUBDIRECTORY(encryption_lib)

#ADD_SUBDIRECTORY(flirt_lib)
#ADD_SUBDIRECTORY(gn_scan_match_lib)
#ADD_SUBDIRECTORY(octomap_lib)
#ADD_SUBDIRECTORY(sqlite3_lib)
#ADD_SUBDIRECTORY(calib_lib)
#ADD_SUBDIRECTORY(ipa_lib)
#ADD_SUBDIRECTORY(dispatching_lib)
#ADD_SUBDIRECTORY(interface_lib)
#ADD_SUBDIRECTORY(action_lib)
#ADD_SUBDIRECTORY(can_festival_lib)

IF(SURO)
	ADD_SUBDIRECTORY(suro_lib)
ENDIF(SURO)

IF(ARM)
#ADD_SUBDIRECTORY(LDK_lib)
#ADD_SUBDIRECTORY(g2o_slam_lib)	
ELSE(ARM)

	if(WIN32)
#		ADD_SUBDIRECTORY(plot_lib)
#		ADD_SUBDIRECTORY(scene_lib)
#		ADD_SUBDIRECTORY(opencv_cus_lib)
	endif(WIN32)
	
#	ADD_SUBDIRECTORY(g2o_slam_lib)
	
ENDIF(ARM)

IF(OPENCV)
#	ADD_SUBDIRECTORY(DBoW3_lib)
#	ADD_SUBDIRECTORY(loop_closure_lib)
ENDIF(OPENCV)
